--- a/frontend/sass/pages/_feed.scss
+++ b/frontend/sass/pages/_feed.scss
@@ -41,7 +41,11 @@
 
         button {
             //modifying default stuff (as defined in components/buttons)
+            height: -webkit-min-content;
+            height: -moz-min-content;
             height: min-content;
+            width: -webkit-min-content;
+            width: -moz-min-content;
             width: min-content;
             margin: 0;
             padding: 0;
