--- a/frontend/vue/src/styles/styles.scss
+++ b/frontend/vue/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 // 1. Configuration and helpers
-@import "abstracts/variables", "abstracts/mixins";
+@import "./abstracts/variables", "./abstracts/mixins";
 
 /*
 // 2. Vendors
@@ -9,16 +9,16 @@
 
 */
 // 3. Base stuff
-@import "base/reset", "base/fonts", "base/typography";
+@import "./base/reset", "./base/fonts", "./base/typography";
 
 // 4. Layout-related sections
-@import "layout/header", "layout/general";
+@import "./layout/header", "./layout/general";
 
 // 5. Components
-@import "components/animations", "components/button", "components/inputs", "components/logo", "components/avatar",
-    "components/admin";
+@import "./components/animations", "./components/button", "./components/inputs", "./components/logo",
+    "./components/avatar", "components/admin";
 
 // 6. Page-specific styles
-@import "pages/connexion", "pages/inscription", "pages/feed";
+@import "./pages/connexion", "./pages/inscription", "./pages/feed";
 
 // 7. Themes
