once again, failing to import scss

--- a/frontend/vue/src/styles/styles.scss
+++ b/frontend/vue/src/styles/styles.scss
@@ -16,7 +16,7 @@
 
 // 5. Components
 @import "./components/animations", "./components/button", "./components/inputs", "./components/logo",
-    "./components/avatar", "components/admin";
+    "./components/avatar", "./components/admin";
 
 // 6. Page-specific styles
 @import "./pages/connexion", "./pages/inscription", "./pages/feed";
