--- a/frontend/vue/src/styles/pages/_feed.scss
+++ b/frontend/vue/src/styles/pages/_feed.scss
@@ -61,7 +61,7 @@
         display: flex;
         justify-content: center;
         img {
-            max-width: 100%;
+            width: 100%;
             margin-top: 10px;
             display: none;
         }
@@ -148,7 +148,7 @@
         //that is the bloc for the actual publication (img and/or text)
         &__content {
             img {
-                max-width: 100%;
+                width: 100%;
             }
 
             p {
