--- a/frontend/vue/src/styles/styles.css
+++ b/frontend/vue/src/styles/styles.css
@@ -500,7 +500,7 @@ textarea:focus {
   justify-content: center;
 }
 .filActualite .imagePreview img {
-  max-width: 100%;
+  width: 100%;
   margin-top: 10px;
   display: none;
 }
@@ -569,7 +569,7 @@ textarea:focus {
   margin-bottom: 20px;
 }
 .filActualite .publication__content img {
-  max-width: 100%;
+  width: 100%;
 }
 .filActualite .publication__content p {
   margin: 10px 0;
