--- a/frontend/vue/src/styles/components/_admin.scss
+++ b/frontend/vue/src/styles/components/_admin.scss
@@ -1,7 +1,6 @@
 //this stylesheet styles the buttons for the moderator
 
 .adminDelete {
-    display: none !important; //hidden by default
     width: 50px;
     margin-bottom: 10px;
     padding: 0;
@@ -15,5 +14,9 @@
     margin-left: auto;
     i {
         color: $admin-delete;
+    }
+
+    :hover {
+        cursor: pointer;
     }
 }
