comments retreiving, admin stuff, sending posts and creationg users without images

--- a/frontend/vue/src/styles/abstracts/_variables.scss
+++ b/frontend/vue/src/styles/abstracts/_variables.scss
@@ -38,3 +38,6 @@ $font-bigger: 22px;
 
 //admin delete button color
 $admin-delete: #d12f39;
+
+//admin approval button color
+$admin-approve: #76d12f;
