--- a/frontend/vue/src/styles/components/_admin.scss
+++ b/frontend/vue/src/styles/components/_admin.scss
@@ -19,4 +19,37 @@
     :hover {
         cursor: pointer;
     }
+
+    @include respond(mobileLandscape) {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.adminApprove {
+    width: 50px;
+    margin-bottom: 10px;
+    padding: 0;
+    border-radius: 50%;
+    //centering the icon
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: 30px;
+
+    i {
+        color: $admin-approve;
+    }
+
+    :hover {
+        cursor: pointer;
+    }
+
+    @include respond(mobileLandscape) {
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
+    }
 }
