--- a/frontend/vue/src/styles/abstracts/_variables.scss
+++ b/frontend/vue/src/styles/abstracts/_variables.scss
@@ -40,4 +40,7 @@ $font-bigger: 22px;
 $admin-delete: #d12f39;
 
 //admin approval button color
-$admin-approve: #76d12f;
+$admin-approve: #479d10;
+
+//admin reported icon
+$admin-reported: #e1541f;
