--- a/frontend/vue/src/styles/components/_admin.scss
+++ b/frontend/vue/src/styles/components/_admin.scss
@@ -1,5 +1,8 @@
 //this stylesheet styles the buttons for the moderator
-
+.adminLine {
+    margin-left: auto;
+    display: flex;
+}
 .adminDelete {
     width: 50px;
     margin-bottom: 10px;
@@ -11,7 +14,7 @@
     justify-content: center;
     align-items: center;
 
-    margin-left: auto;
+    margin-left: 30px;
     i {
         color: $admin-delete;
     }
@@ -21,6 +24,13 @@
     }
 
     @include respond(mobileLandscape) {
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
+    }
+
+    &__comments {
+        margin-left: auto;
         width: 40px;
         height: 40px;
     }
@@ -45,6 +55,58 @@
 
     :hover {
         cursor: pointer;
+    }
+
+    @include respond(mobileLandscape) {
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
+    }
+}
+
+.report {
+    width: 50px;
+    margin-bottom: 10px;
+    padding: 0;
+    border-radius: 50%;
+    //centering the icon
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: 30px;
+
+    i {
+        color: $accent-color;
+    }
+
+    :hover {
+        cursor: pointer;
+    }
+
+    @include respond(mobileLandscape) {
+        width: 40px;
+        height: 40px;
+        margin-left: 15px;
+    }
+}
+
+.adminReport {
+    width: 50px;
+    margin-bottom: 10px;
+    padding: 0;
+    border-radius: 50%;
+    //centering the icon
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: 30px;
+
+    i {
+        color: $admin-reported;
     }
 
     @include respond(mobileLandscape) {
